// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabWrapper renders tab component with all props 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-shadow: inset 0 calc(-1 * 1px) 0 rgba(255,255,255,0.1);
}

<ul
  className="c0 tw-tab-wrapper"
  role="tablist"
/>
`;

exports[`TabWrapper renders tab component with required props 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: inset 0 calc(-1 * 1px) 0 rgba(255,255,255,0.1);
}

<ul
  className="c0 tw-tab-wrapper"
  role="tablist"
/>
`;
